<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.dream.live.cricket.score.hd.scores.model.LiveScoresModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_series"
                android:layout_width="0sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@{model.match_description +' '+ '.' +' '+ model.series_name}"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                />


            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/noLive"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_series"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_11sdp"
                />


            <ImageView
                android:id="@+id/iv_first_team"
                android:layout_width="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"
                android:contentDescription="@string/team_1_image"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/placehold" />


            <TextView
                android:id="@+id/tv_first_team"
                android:layout_width="0sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/iv_first_team"
                app:layout_constraintBottom_toBottomOf="@+id/iv_first_team"
                app:layout_constraintTop_toTopOf="@+id/iv_first_team"
                android:layout_height="wrap_content"
                android:text="@{model.team_1.teamName}"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/iv_second_team"
                android:layout_width="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_first_team"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/team_2_image"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/placehold"
                 />


            <TextView
                android:id="@+id/tv_second_team"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="0sp"
                app:layout_constraintStart_toEndOf="@+id/iv_second_team"
                app:layout_constraintBottom_toBottomOf="@+id/iv_second_team"
                app:layout_constraintTop_toTopOf="@+id/iv_second_team"
                android:layout_height="wrap_content"
                android:text="@{model.team_2.teamName}"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                 />


            <TextView
                android:id="@+id/startTime"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_second_team"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#0d5ba4"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>


</layout>